--- a/index.html
+++ b/index.html
@@ -408,10 +408,9 @@
             </div>
             <div class="col-1-of-2">
                 <p class="footer__copyright">
-                    Built by <a href="#" class="footer__link">Triola Jackson</a> for her online course <a href="#"
-                        class="footer__link">Advanced CSS and Sass</a>. Copyright &copy; by Jonas. You are 100%
-                    allowed to use this webpage for both personal and commercial use, but not to claim it as your own
-                    design. A credit to the original author is of course highly appreciated!
+                    <!-- Built by <a href="#" class="footer__link">TM Jackson</a> for her online course <a href="#"
+                                            class="footer__link">Advanced CSS and Sass</a>. -->
+                    Copyright &copy; Built by TM Jackson. Design by Jonas Schmedtmann
                 </p>
             </div>
         </div>
